# flobby

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  TODO  check  flobby-u19.deb_20200521-1_amd64.deb
cmake/: FindImageMagick.cmake  FindJsoncpp.cmake  config.h
debpackages/: .docker-compose.yml.swp  .env  .env.swp  .flobby_installer.sh.swp  .gitignore  .make_dockerfile.sh.swp  .make_flobby.sh.swp  19-sources.list  Dockerfile  docker-compose.yml  flobby-u19-_20200522-1_amd64.deb  flobby_installer.sh  make_dockerfile.sh  make_flobby.sh
doc/: join_battle.uxf  login_messages_sequence.uxf  login_sequence.uxf
src/: CMakeLists.txt  FlobbyDirs.cpp  FlobbyDirs.h  logging.h  main.cpp
src/cmake/: FlobbyConfig.cmake  FlobbyConfig.h.in
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h  IServerEvent.h  ServerConn.cpp  ServerConn.h
src/gui/: AddBotDialog.cpp  AddBotDialog.h  AgreementDialog.cpp  AgreementDialog.h  BattleChat.cpp  BattleChat.h  BattleFilterDialog.cpp  BattleFilterDialog.h  BattleInfo.cpp  BattleInfo.h  BattleList.cpp  BattleList.h  BattleRoom.cpp  BattleRoom.h  CMakeLists.txt  Cache.cpp  Cache.h  ChannelChat.cpp  ChannelChat.h  ChannelChatTab.cpp  ChannelChatTab.h  ChannelsWindow.cpp  ChannelsWindow.h  ChatInput.cpp  ChatInput.h  ChatSettingsDialog.cpp  ChatSettingsDialog.h  ChatTabs.cpp  ChatTabs.h  DownloadSettingsDialog.cpp  DownloadSettingsDialog.h  FontSettingsDialog.cpp  FontSettingsDialog.h  GameSettings.cpp  GameSettings.h  IChat.h  IChatTabs.h  ITabs.h  LogFile.cpp  LogFile.h  (+57 more)
src/log/: CMakeLists.txt  Log.cpp  Log.h
src/md5/: CMakeLists.txt
src/model/: AI.cpp  AI.h  Battle.cpp  Battle.h  Bot.cpp  Bot.h  CMakeLists.txt  Channel.cpp  Channel.h  IController.h  IControllerEvent.h  LobbyProtocol.cpp  LobbyProtocol.h  MapInfo.cpp  MapInfo.h  Model.cpp  Model.h  Nightwatch.cpp  Nightwatch.h  Script.cpp  Script.h  ServerCommands.cpp  ServerCommands.h  ServerInfo.h  StartRect.cpp  StartRect.h  UnitSync.cpp  UnitSync.h  User.cpp  User.h  UserBattleStatus.cpp  UserBattleStatus.h  UserId.cpp  UserId.h  UserStatus.cpp  UserStatus.h
src/test/: CMakeLists.txt  MyImageTestFile  Test.cpp  Test.h  test_main.cpp
tools/: generate_UnitSync.sh
ubuntu/: Dockerfile  docker-compose.yml  flobby_installer.sh
